[gd_scene load_steps=15 format=3 uid="uid://dd321epjv74vk"]

[ext_resource type="Script" path="res://Scripts/Seeker.gd" id="1_42gxo"]
[ext_resource type="PackedScene" uid="uid://kf8tqdlm8c5t" path="res://addons/vision_cone_2d/vision_cone_2d_template.tscn" id="2_f6hvk"]
[ext_resource type="Texture2D" uid="uid://7di2n0flxa3o" path="res://Assets/Art/Seeker1.png" id="4_4v2a0"]
[ext_resource type="Texture2D" uid="uid://c2orpk8hkat85" path="res://Assets/2d_lights_and_shadows_neutral_point_light.webp" id="4_ofeyr"]
[ext_resource type="Texture2D" uid="uid://dbr6kml8hd6ot" path="res://Assets/Art/Seeker2.png" id="5_n83a0"]
[ext_resource type="Texture2D" uid="uid://cxx03ni4tks71" path="res://Assets/Art/Seeker3.png" id="6_wjqx5"]
[ext_resource type="Texture2D" uid="uid://b5wsqmh7c6shl" path="res://Assets/Art/Seeker4.png" id="7_beex4"]
[ext_resource type="Texture2D" uid="uid://deffrokck6qdx" path="res://Assets/Art/Seeker5.png" id="8_l1vd7"]
[ext_resource type="Texture2D" uid="uid://huf5cphksgk2" path="res://Assets/Art/Seeker6.png" id="9_0i7tr"]
[ext_resource type="Texture2D" uid="uid://bpd63yv6hehjb" path="res://Assets/Art/Seeker7.png" id="10_2smex"]
[ext_resource type="Texture2D" uid="uid://dp4a2b83cv0kf" path="res://Assets/Art/Seeker8.png" id="11_y5see"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_em3co"]
radius = 20.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3wsqu"]
radius = 18.0
height = 72.0

[sub_resource type="SpriteFrames" id="SpriteFrames_s3kt3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_4v2a0")
}, {
"duration": 1.0,
"texture": ExtResource("5_n83a0")
}, {
"duration": 1.0,
"texture": ExtResource("6_wjqx5")
}, {
"duration": 1.0,
"texture": ExtResource("7_beex4")
}, {
"duration": 1.0,
"texture": ExtResource("8_l1vd7")
}, {
"duration": 1.0,
"texture": ExtResource("9_0i7tr")
}, {
"duration": 1.0,
"texture": ExtResource("10_2smex")
}, {
"duration": 1.0,
"texture": ExtResource("11_y5see")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}]

[node name="Seeker" type="Node2D" groups=["delete"]]

[node name="CharacterBody2D" type="CharacterBody2D" parent="." node_paths=PackedStringArray("vision_renderer") groups=["seeker"]]
script = ExtResource("1_42gxo")
vision_renderer = NodePath("VisionCone2D/VisionConeRenderer")
alert_color = Color(0.901961, 0.141176, 0.188235, 0.286275)
sound_color = Color(0.0941176, 0.223529, 0.729412, 0.286275)

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
position = Vector2(0, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_em3co")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3wsqu")

[node name="VisionCone2D" parent="CharacterBody2D" instance=ExtResource("2_f6hvk")]
position = Vector2(0, 30)

[node name="Texture light" type="PointLight2D" parent="CharacterBody2D/VisionCone2D"]
visible = false
energy = 0.7
texture = ExtResource("4_ofeyr")
texture_scale = 4.0

[node name="Shadow" type="PointLight2D" parent="CharacterBody2D/VisionCone2D"]
visible = false
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("4_ofeyr")
texture_scale = 2.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="CharacterBody2D"]
path_desired_distance = 10.0

[node name="autopathIdle" type="Timer" parent="CharacterBody2D"]
wait_time = 10.0
autostart = true

[node name="soundWait" type="Timer" parent="CharacterBody2D"]
wait_time = 3.0
one_shot = true

[node name="seenWait" type="Timer" parent="CharacterBody2D"]
wait_time = 3.0
one_shot = true

[node name="unreachableWait" type="Timer" parent="CharacterBody2D"]
wait_time = 2.0
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_s3kt3")
animation = &"Walk"
frame_progress = 0.99943
flip_v = true

[connection signal="body_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/VisionCone2D/VisionConeArea" to="CharacterBody2D" method="_on_vision_cone_area_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/VisionCone2D/VisionConeArea" to="CharacterBody2D" method="_on_vision_cone_area_body_exited"]
[connection signal="timeout" from="CharacterBody2D/autopathIdle" to="CharacterBody2D" method="_on_autopath_idle_timeout"]
[connection signal="timeout" from="CharacterBody2D/soundWait" to="CharacterBody2D" method="_on_sound_wait_timeout"]
[connection signal="timeout" from="CharacterBody2D/seenWait" to="CharacterBody2D" method="_on_seen_wait_timeout"]
[connection signal="timeout" from="CharacterBody2D/unreachableWait" to="CharacterBody2D" method="_on_unreachable_wait_timeout"]

[editable path="CharacterBody2D/VisionCone2D"]
